@@ -25,7 +25,6 @@ import io.prometheus.metrics.model.snapshots.Labels;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import org.apache.lucene.tests.util.TestUtil;
@@ -131,8 +130,7 @@ public class TestThinCache extends SolrTestCaseJ4 {
 
     NoOpRegenerator regenerator = new NoOpRegenerator();
     backing.init(params, null, null);
-    Object initObj =
-        lfuCache.init(Collections.singletonMap("autowarmCount", "25"), null, regenerator);
+    Object initObj = lfuCache.init(Map.of("autowarmCount", "25"), null, regenerator);
     lfuCache.setState(SolrCache.State.LIVE);
     for (int i = 0; i < 101; i++) {
       lfuCache.put(i + 1, Integer.toString(i + 1));
@@ -151,7 +149,7 @@ public class TestThinCache extends SolrTestCaseJ4 {
     assertNull(lfuCache.get(1)); // first item put in should be the first out
 
     // Test autowarming
-    newLFUCache.init(Collections.singletonMap("autowarmCount", "25"), initObj, regenerator);
+    newLFUCache.init(Map.of("autowarmCount", "25"), initObj, regenerator);
     newLFUCache.warm(null, lfuCache);
     newLFUCache.setState(SolrCache.State.LIVE);
 
